fix: squashed vector images. Minor CSS fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -299,7 +299,7 @@ header.header {
     0px 2px 1px rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-content-header:hover {
+.portfolio-content-header:hover .portfolio-back-description {
   transform: translateY(0%);
 }
 .portfolio-image {
@@ -313,7 +313,7 @@ header.header {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: в який записана css змінна зі значенням #f4f4fd;
+  color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
   height: 100%;
@@ -371,7 +371,7 @@ footer > div.container > .logo-link {
 .footer-social-item {
   width: 40px;
   height: 40px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-link {
   display: flex;
